--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset='utf-8'>
+	<meta name="description" content="The Logan catalog for the tech department.">
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
 	<title>Logan Tech Catalog</title>
